Added Volume Light :
	- Added CUIWindowAddVolumeLight
	- Made changes to UIMainWindow (for Volume Lights)

To do :
	- Add parameters when creating a Volume Light
	- Add Volume Light edit window

--- a/SSWE Project/SSWELib/SSWELib.vcxproj
+++ b/SSWE Project/SSWELib/SSWELib.vcxproj
@@ -169,6 +169,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\" /y
     <ClCompile Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddObject.cpp" />
     <ClCompile Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddTerrain.cpp" />
     <ClCompile Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddTree.cpp" />
+    <ClCompile Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddVolumeLight.cpp" />
     <ClCompile Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddWatersSurface.cpp" />
     <ClCompile Include="..\..\sources\UserInterfaces\MainWindow\UIMainWindow.cpp" />
     <ClCompile Include="..\..\sources\UserInterfaces\MaterialEditor\CMaterialEditorFactory.cpp" />
@@ -228,6 +229,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\" /y
     <ClInclude Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddObject.h" />
     <ClInclude Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddTerrain.h" />
     <ClInclude Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddTree.h" />
+    <ClInclude Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddVolumeLight.h" />
     <ClInclude Include="..\..\sources\UserInterfaces\MainWindow\CUIWindowAddWatersSurface.h" />
     <ClInclude Include="..\..\sources\UserInterfaces\MainWindow\UIMainWindow.h" />
     <ClInclude Include="..\..\sources\UserInterfaces\MaterialEditor\CMaterialEditorFactory.h" />
