Updated to Irrlicht 1.8 Final
	- No uses the occlusion query (for lens flares)
	- Upgraded and fixed SPARK for irrlicht 1.8
	- Fixed some bugs
	- Fixed GUI Skin

To do:
	- Enable occlusion queries when using XEffect

--- a/SSWE Project/SPARK/SPARK155/projects/vc2008/SPARK engine/SPARK IRR DLL.vcxproj
+++ b/SSWE Project/SPARK/SPARK155/projects/vc2008/SPARK engine/SPARK IRR DLL.vcxproj
@@ -60,7 +60,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\..\Irrlicht\libs\include;$(SolutionDir)..\..\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\..\Irrlicht\libs\include\;$(SolutionDir)..\..\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;SPK_IRR_EXPORT;SPK_CORE_IMPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>TurnOffAllWarnings</WarningLevel>
