Ignored Output folder
Signed-off-by: Erio Maondial <linux.erio-maondial@live.fr>

--- a/SSWE Project/SPARK/SPARK155/projects/vc2008/SPARK engine/SPARK IRR LIB.vcxproj
+++ b/SSWE Project/SPARK/SPARK155/projects/vc2008/SPARK engine/SPARK IRR LIB.vcxproj
@@ -77,7 +77,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
-      <AdditionalIncludeDirectories>..\..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\include;%(AdditionalIncludeDirectories);$(SolutionDir)\..\..\..\..\Irrlicht\libs\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>Sync</ExceptionHandling>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
