Worked on animations and Post Processes
Made:
	- New UI for XEffect edition window
	- Export actions of an animated object
	- Added Screen Space Ambiant Occlusion (SSAO) post process
	- Added volume lights in the right scene tree view
	- Added some features in XEffect
	- Get and Set an XML Action (for animated objects)
	- Added some functions in Core Data

To do:
	- Import correctly actions of an animated object
	- Add water surfaces in the right scene tree view

--- a/SSWE Project/SSWERenders/SSWERenders.vcxproj.filters
+++ b/SSWE Project/SSWERenders/SSWERenders.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="..\..\sources\Renders\XEffect\XEffects.h">
       <Filter>Renders\XEffect</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\sources\Renders\PostProcessor\ScreenSpaceAmbientOcclusion.h">
+      <Filter>Renders\PostProcessor</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="SSWERenders.def">
