--- a/SSWE Project/SSWERenders/SSWERenders.vcxproj
+++ b/SSWE Project/SSWERenders/SSWERenders.vcxproj
@@ -115,6 +115,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\" /y
     <ClInclude Include="..\..\sources\Renders\PostProcessor\ScreenSpaceAmbientOcclusion.h">
       <FileType>CppCode</FileType>
     </ClInclude>
+    <ClCompile Include="..\..\sources\Renders\PostProcessor\ScreenSpaceAmbientOcclusion.cpp" />
     <ClCompile Include="..\..\sources\Renders\XEffect\CShaderPre.cpp" />
     <ClCompile Include="..\..\sources\Renders\XEffect\EffectHandler.cpp" />
     <ClCompile Include="SSWERenders.cpp" />
